fix position overlapping

--- a/css/utilities/position.css
+++ b/css/utilities/position.css
@@ -1,3 +1,7 @@
+.absolute {
+  position: absolute;
+}
+
 .bottom-2 {
   bottom: 2rem;
 }
